--- a/app/views/customers.html
+++ b/app/views/customers.html
@@ -8,7 +8,7 @@ Filter: <input type="text" ng-model="customerFilter.name" />
         <th ng-click="doSort('city')">City</th>
         <th ng-click="doSort('orderTotal')">Order Total</th>
         <th ng-click="doSort('joined')">Joined</th>
-        <th>&nbps;</th>
+        <th>&nbsp;</th>
     </tr>
     <tr ng-repeat="cust in customers | filter:customerFilter | orderBy:sortBy:reverse">
         <td>{{ cust.name | uppercase }}</td>
