--- a/app/views/customers.html
+++ b/app/views/customers.html
@@ -1,4 +1,4 @@
-<h2>Customers</h2>
+<h2>{{ appSettings.title }}</h2>
 Filter: <input type="text" ng-model="customerFilter.name" />
 <br/><br/>
 
@@ -20,3 +20,5 @@ Filter: <input type="text" ng-model="customerFilter.name" />
 </table>
 <br/>
 <span>Total customers: {{ customers.length }}</span>
+<br/><br/>
+<footer>Version: {{ appSettings.version }}</footer>
