--- a/app/views/customers.html
+++ b/app/views/customers.html
@@ -11,7 +11,7 @@ Filter: <input type="text" ng-model="customerFilter.name" />
         <th>&nbsp;</th>
         <th>&nbsp;</th>
     </tr>
-    <tr ng-repeat="cust in customers | filter:customerFilter | orderBy:sortBy:reverse">
+    <tr ng-repeat="cust in customers | filter:customerFilter | orderBy:sortBy:reverse" class="repeat-animation">
         <td>{{ cust.name | uppercase }}</td>
         <td>{{ cust.city | lowercase }}</td>
         <td>{{ cust.orderTotal | currency }}</td>
