--- a/app/views/allorders.html
+++ b/app/views/allorders.html
@@ -7,7 +7,7 @@ Filter: <input type="text" ng-model="orderFilter.product" />
         <th>Product</th>
         <th>Total</th>
     </tr>
-    <tr ng-repeat="order in orders | filter:orderFilter | orderBy:'name'">
+    <tr ng-repeat="order in orders | filter:orderFilter | orderBy:'name'" class="repeat-animation">
         <td>{{ order.product }}</td>
         <td>{{ order.total | currency }}</td>
     </tr>
